# cookiecutter-django-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
