[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [
    {name="{{cookiecutter.author_name}} <{{cookiecutter.email}}>"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "cookiecutter (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
flake8-pyproject = "^1.2.3"  # for flake8 configuraion

[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.flake8]
max-line-length=100
